app.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-sql-service
spec:
  ports:
  - port: 80
  selector:
    app: webapp-sql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-sql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-sql
  template:
    metadata:
      labels:
        app: webapp-sql
    spec:
      volumes:
      - name: dir
        hostPath:
          path: /code
      nodeSelector:
        "kubernetes.io/os": linux
      imagePullSecrets:
      - name: mysecret1
      containers:
      - name: webapp-sql
        image: laravelregistry.azurecr.io/employeesmanager_app:latest
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
