mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  # namespace: mysql-database  
spec:
  type: NodePort
  ports:
  - port: 3306
    nodePort: 30037
    targetPort: 3306
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  # namespace: mysql-database
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      imagePullSecrets:
      - name: mysecret1
      containers:
      - name: mysql
        image: laravelregistry.azurecr.io/mysql:latest
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 3306
