ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-sql
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: webapp-sql.sp2022pfe.tk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-sql
                port:
                  number: 80
